# grimjack

./: .coveragerc  .gitignore  00-abstract.tex  01-introduction.tex  02-related-work.tex  03-approach.tex  04-evaluation.tex  04-runs.tex  05-conclusion.tex  05-results.tex  06-conclusion.tex  Dockerfile  LICENSE  Pipfile  README.md  figure-pipeline.tex  ideas.md  literature.bib  pyproject.toml  setup.cfg  table-axioms.tex  table-effectiveness.tex  table-generated-queries.tex  table-judgments.tex  table-quality-stance-mapping.tex  table-results-quality.tex  table-results-relevance.tex  table-results-stance.tex  table-stance-mapping.tex  tira-run-1.sh  tira-run-all-you-need-is-t0.sh  tira-run-argumentative-axioms.sh  tira-run-baseline.sh  tira-run-fair-argumentative-reranking-with-t0.sh  tira-run-fair-reranking-argumentative-axioms.sh  tira-run.sh  tira-setup.sh  touche-2022-answering-comparative-questions-with-axiomatic-reranking-and-query-reformulation.tex  touche22-axiomatic-reranking-query-reformulation.tex
data/: .gitignore  qrels-manual.txt
grimjack/: __init__.py  __main__.py  constants.py  data.py  pipeline.py  query_preprocessing.py  run.py
lib/: debater_python_api-3.5.8.tar.xz  index.md
literature/: literature.bib
paper/: .gitignore  00-abstract.tex  01-introduction.tex  02-related-work.tex  03-approach.tex  04-evaluation.tex  04-runs.tex  05-conclusion.tex  05-results.tex  06-conclusion.tex  figure-pipeline.tex  literature.bib  sample-1col.tex  table-axioms.tex  table-generated-queries.tex  table-quality-mapping.tex  touche-2022-answering-comparative-questions-with-axiomatic-reranking-and-query-reformulation.tex
roadmap/: .gitignore  2021-10-28.tex  2021-11-11.tex  2021-mm-dd.tex  mlutalk.cls
talk/: mlutalk.cls  presentation-2022-02-08.tex  talk.tex  talk.txt
(+44 files in other folders)
