[project]
name = "grimjack"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
dependencies = [
    "pyserini~=0.14.0",
    "dload~=0.6.0",
    "pytest~=8.1",
    "nltk~=3.7",
    "autopep8~=2.0",
    "pylint~=3.0",
    "pytest-cov~=5.0",
    "rope~=1.4",
    "flake8~=7.0",
    "gensim~=4.2",
    "requests~=2.28",
    "tqdm~=4.64",
    "trectools~=0.0.49",
    "faiss-cpu~=1.7",  # Needed for pyserini >= 0.14.0
    "torch~=2.2",  # Needed for pyserini >= 0.14.0
    "debater-python-api~=4.3",
    "dataclasses-json~=0.6.4",
    "pandas~=1.5",
    "pymagnitude~=0.1.143",
    "annoy~=1.17",  # Needed for pymagnitude
    "diskcache~=5.4",
    "websockets~=13.0",
    "targer-api~=1.1",
    "spacy~=3.7",
    "ir-axioms~=0.1.3",
    "urllib3~=2.2",
    "pillow~=10.2",
    "lxml~=5.1",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/janheinrichmerker/grimjack"
"Bug Tracker" = "https://github.com/janheinrichmerker/grimjack/issues"

[build-system]
requires = ["setuptools>=50", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["grimjack"]

[tool.setuptools_scm]
