[metadata]
name = grimjack
version = 0.1.0
description = TODO
url = https://github.com/heinrichreimer/grimjack
project_urls =
    Bug Tracker = https://github.com/heinrichreimer/grimjack/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
